--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="hero">
         <nav class="nav container">
-            <h2 class="nav__logo">Andres Candama</h2>
+            <h2 class="nav__logo">Andy c</h2>
 
             <ul class="nav__list">
                 <li class="nav__item"><a href="#" class="nav__link">Init</a></li>
